exports[`test add_meetup 1`] = `
Object {
  "description": "",
  "end": "2017-02-21 02:04",
  "loading": true,
  "location": "",
  "name": "",
  "start": "2017-02-21 01:04",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 00:04",
  "voteStart": "2017-02-20 23:34",
}
`;

exports[`test add_meetup_success 1`] = `
Object {
  "description": "",
  "end": "2017-02-21 02:04",
  "location": "",
  "name": "",
  "start": "2017-02-21 01:04",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 00:04",
  "voteStart": "2017-02-20 23:34",
}
`;

exports[`test edit_meetup 1`] = `
Object {
  "description": "",
  "end": "2017-02-21 02:04",
  "loading": true,
  "location": "",
  "name": "",
  "start": "2017-02-21 01:04",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 00:04",
  "voteStart": "2017-02-20 23:34",
}
`;

exports[`test edit_meetup_success 1`] = `
Object {
  "description": "",
  "end": "2017-02-21 02:04",
  "location": "",
  "name": "",
  "start": "2017-02-21 01:04",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 00:04",
  "voteStart": "2017-02-20 23:34",
}
`;

exports[`test meetupChange 1`] = `
Object {
  "description": "",
  "end": "2017-02-21 02:04",
  "location": "",
  "name": "",
  "start": "2017-02-21 01:04",
  "state": "Pennsylvania",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 00:04",
  "voteStart": "2017-02-20 23:34",
}
`;

exports[`test resetMeetup 1`] = `
Object {
  "description": "",
  "end": "2017-02-21 02:04",
  "location": "",
  "name": "",
  "start": "2017-02-21 01:04",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 00:04",
  "voteStart": "2017-02-20 23:34",
}
`;

exports[`test set_vote 1`] = `
Object {
  "venues": Object {
    "123": Object {
      "name": "test",
      "vote": 0,
      "votes": 2,
    },
    "venue": Object {
      "name": "test",
      "vote": 0,
      "votes": 2,
    },
  },
}
`;

exports[`test setCurrentMeetup 1`] = `
Object {
  "description": "test",
  "end": "2017-02-21 02:04",
  "location": "",
  "name": "test",
  "start": "2017-02-21 01:04",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 00:04",
  "voteStart": "2017-02-20 23:34",
}
`;

exports[`test undefined 1`] = `
Object {
  "description": "",
  "end": "2017-02-21 02:04",
  "location": "",
  "name": "",
  "start": "2017-02-21 01:04",
  "state": "New York",
  "status": "created",
  "venue": Object {
    "id": "topPicks",
    "name": "Top Picks",
  },
  "venues": Object {},
  "voteEnd": "2017-02-21 00:04",
  "voteStart": "2017-02-20 23:34",
}
`;
